--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ a:hover {
   margin-right: auto;
 }
 
-.assign1 table, th, td, th {
+.assign1 table, .assign1 th, .assign1 td, .assign1 th {
   border: 1px solid;
   padding: 10px;
 }
@@ -72,4 +72,14 @@ a:hover {
 .assign1 .main {
   float:left;
   width:65%;
+}
+
+.form table {
+  text-align: left;
+  border-style: none;
+  padding-bottom: 10px;
+}
+
+input {
+
 }
