--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,122 @@
-p {
-  font-family:sans-serif;
-  color:white;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: sans-serif;
-}
-
 body {
-  margin:10px;
   background-image:url("content/images/dark-triangles.png");
-  background-color: cccccc;
   background-repeat: repeat-xy;
   color:white;
-  font-family: sans-serif;
 }
 
-hr {
-  border-color: white;
+/* Adjust the default bootstrap */
+.navbar-default {
+  background-color: #808080;
+  border-color: #ffa500;
+}
+.navbar-default .navbar-brand {
+  color: #ffa500;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #ffffff;
+}
+.navbar-default .navbar-text {
+  color: #ffa500;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #ffa500;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #ffffff;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #ffffff;
+  background-color: #ffa500;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #ffffff;
+  background-color: #ffa500;
+}
+.navbar-default .navbar-toggle {
+  border-color: #ffa500;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #ffa500;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #ffa500;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #ffa500;
+}
+.navbar-default .navbar-link {
+  color: #ffa500;
+}
+.navbar-default .navbar-link:hover {
+  color: #ffffff;
 }
 
-ul {
-  list-style-type:square;
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #ffa500;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #ffffff;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #ffffff;
+    background-color: #ffa500;
+  }
 }
 
-table {
-  border: white;
+.btn-custom {
+  color: #ffffff;
+  background-color: #808080;
+  border-color: #FFA500;
 }
 
-a:link {
-  color:orange;
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom:active,
+.btn-custom.active,
+.open .dropdown-toggle.btn-custom {
+  color: #ffffff;
+  background-color: #FFA500;
+  border-color: #FFA500;
 }
 
-a:visited {
-  color:orange;
+.btn-custom:active,
+.btn-custom.active,
+.open .dropdown-toggle.btn-custom {
+  background-image: none;
 }
 
-a:hover {
-  color:orange;
-  background-color: grey;
+.btn-custom.disabled,
+.btn-custom[disabled],
+fieldset[disabled] .btn-custom,
+.btn-custom.disabled:hover,
+.btn-custom[disabled]:hover,
+fieldset[disabled] .btn-custom:hover,
+.btn-custom.disabled:focus,
+.btn-custom[disabled]:focus,
+fieldset[disabled] .btn-custom:focus,
+.btn-custom.disabled:active,
+.btn-custom[disabled]:active,
+fieldset[disabled] .btn-custom:active,
+.btn-custom.disabled.active,
+.btn-custom[disabled].active,
+fieldset[disabled] .btn-custom.active {
+  background-color: #808080;
+  border-color: #FFA500;
 }
 
-.menu {
-  background-color: grey;
-  font-size: 20px;
-
-}
-
-.menu a {
-  padding: 0px 5px 0px 5px;
-  border-right: 2px solid white;
-  text-decoration: none;
-}
-
-.menu a:hover {
-  color: white;
-  background-color: orange;
-}
-
-.center {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.assign1 table, .assign1 th, .assign1 td, .assign1 th {
-  border: 1px solid;
-  padding: 10px;
-}
-
-.assign1 .main {
-  float:left;
-  width:65%;
-}
-
-.form table {
-  text-align: left;
-  border-style: none;
-  padding-bottom: 10px;
-}
-
-input {
-
-}
-
-.fixedTable {
-  border: 1px solid white;
-  table-layout: fixed;
-  width: 200px;
-}
-
-.fixedTable th, td {
-  border: 1px solid white;
-  width: 100px;
-}
-
-.large {
-  width: 300px;
-  height: 400px;
-}
-
-canvas {
-  border:1px solid white;
+.btn-custom .badge {
+  color: #808080;
+  background-color: #ffffff;
 }
